added simulation speed slider and initialGrassPercentage